メタタグ編集

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <title>とくらす瀬戸内</title>		
 		<!-- Meta Description -->
         <meta name="description" content="瀬戸内市移住交流促進協議会">
-        <meta name="keywords" content="one page, single page, onepage, responsive, parallax, creative, business, html5, css3, css3 animation">
-        <meta name="author" content="Muhammad Morshed">
+        <meta name="keywords" content="瀬戸内市,移住">
+        <meta name="author" content="とくらす瀬戸内">
 		<!-- Mobile Specific Meta -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		
